--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
     <s>
         vinayak
     </s>
+    <br><br><a href="mailto:pandharevinayak94@gmail.com">Click Here</a> To Email Me.
 
 </body>
 </html>
